Fixed slide z-index when fade effect is used

--- a/less/content-carousel.less
+++ b/less/content-carousel.less
@@ -108,18 +108,22 @@ content-carousel {
   @keyframes fadeIn {
     from {
       opacity: 0;
+      z-index: -1;
     }
     to {
       opacity: 1;
+      z-index: 0;
     }
   }
 
   @keyframes fadeOut {
     from {
       opacity: 1;
+      z-index: 0;
     }
     to {
       opacity: 0;
+      z-index: -1;
     }
   }
 }
